@@ -32,4 +32,19 @@
 Server savefile does not exist
 Please wait...
 Object flavors initialized...
+Couldn't send info to meta-server!
+Server is running version 3140
+05 Aug 04:43:59: Welcome Evileye=root@theforest.demon.co.uk (0.0.0.0/0)
+Savefile does not exist for player Evileye.
+Couldn't send info to meta-server!
+05 Aug 04:44:10: Goodbye Evileye=root@theforest.demon.co.uk ("client quit")
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+05 Aug 04:44:29: Welcome Evileye=root@theforest.demon.co.uk (0.0.0.0/0)
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+05 Aug 04:44:43: Goodbye Evileye=root@theforest.demon.co.uk ("client quit")
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
 Warning: Next signal kills server!
+Couldn't send info to meta-server!
