@@ -283,8 +283,8 @@ extern int player_euid;
 extern int player_egid;
 extern player_type **Players;
 extern party_type parties[MAX_PARTIES];
-extern house_type houses[MAX_HOUSES];
-extern int num_houses;
+extern house_type *houses;
+extern u32b num_houses;
 extern long GetInd[];
 /*extern char player_name[32];
 extern char player_base[32];
@@ -801,7 +801,7 @@ extern bool remove_hostility(int Ind, cptr name);
 extern bool check_hostile(int attacker, int target);
 extern cptr lookup_player_name(int id);
 extern int lookup_player_id(cptr name);
-extern void add_player_name(cptr name, int id);
+extern void add_player_name(cptr name, int id, time_t laston);
 extern void delete_player_id(int id);
 extern void delete_player_name(cptr name);
 extern int player_id_list(int **list);
